# ab1tools

./: .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
ab1tools/: __init__.py  abif_reader.py  abif_writer.py  cli.py  hetero.py  signal.py  variant_caller.py  visualize.py
demo_data/input/Analysis/: all-consensus-seqs.fasta  all-consensus-seqs.fasta.fai  params.json  versions.txt  wf-amplicon-report.html
demo_data/input/Analysis/barcode01/alignments/: barcode01.aligned.sorted.bam  barcode01.aligned.sorted.bam.bai
demo_data/input/Analysis/barcode02/alignments/: barcode02.aligned.sorted.bam.bai
demo_data/input/Analysis/barcode02/consensus/: consensus.fastq
demo_data/input/Analysis/barcode03/alignments/: barcode03.aligned.sorted.bam  barcode03.aligned.sorted.bam.bai
demo_data/input/Analysis/barcode03/consensus/: consensus.fastq
demo_data/input/Analysis/barcode04/alignments/: barcode04.aligned.sorted.bam.bai
demo_data/input/Analysis/barcode04/consensus/: consensus.fastq
demo_data/input/Analysis/barcode05/consensus/: consensus.fastq
demo_data/input/Analysis/execution/: report.html  timeline.html  trace.txt
demo_data/input/sequences/: barcode01.fasta  barcode01.fastq
docs/wiki/: AB1-Format-Reference.md  Analyze-Variants.md  Convert-Formats.md  FAQ.md  Generate-AB1-Files.md  Home.md  Inspect-AB1-Files.md  Installation.md  Process-AB1-Files.md  Signal-Parameters.md  Use-Cases.md  Visualize-Chromatograms.md
tests/: test_ab1_io.py  test_signal.py  test_variant_caller.py
(+7 files in other folders)
